# Business_chatbot

./: requirments.txt
business_chatbot/: README.md  data.txt  pyproject.toml  report.md
business_chatbot/knowledge/: user_preference.txt
business_chatbot/src/business_chatbot/: None  analysis_response.md  business_flow.py  crew.py  direct_response.md  main.py  my_flow_plot.html  my_project_storage  report.md  result.csv
business_chatbot/src/business_chatbot/config/: agents.yaml  tasks.yaml
business_chatbot/src/business_chatbot/db/: chroma.sqlite3
business_chatbot/src/business_chatbot/security/: security.py
business_chatbot/src/business_chatbot/tools/: api_client.py  csv_tools.py  custom_tool.py  memory_service.py  streaming_listener.py
