[project]
name = "business_chatbot"
version = "0.1.0"
description = "Business_chatbot using crewAI"
authors = [
    { name = "Rmili Yahya", email = "rmiliyahya2@gmail.com" },
    { name = "Salhi Abdelmounaim", email = "rmiliyahya2@gmail.com" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
business_chatbot = "business_chatbot.main:run"
run_crew = "business_chatbot.main:run"
train = "business_chatbot.main:train"
replay = "business_chatbot.main:replay"
test = "business_chatbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
